section bikes update of correct showing spec by javascript. Correct working on mobile and desktop devices

--- a/sass/bike-style.scss
+++ b/sass/bike-style.scss
@@ -37,10 +37,6 @@ body {
 		transition: color 0.2s ease-in-out;
 	}
 
-	&__logo:hover {
-		color: var(--light-green);
-	}
-
 	&__burger-btn {
 		display: flex;
 		flex-direction: column;
@@ -120,11 +116,6 @@ body {
 			height 0.2s ease-in-out 0.2s;
 	}
 
-	&__item:hover::after {
-		transform: translateX(0%);
-		height: 50%;
-	}
-
 	.burger-menu-active {
 		visibility: visible;
 		opacity: 1;
@@ -133,6 +124,7 @@ body {
 
 .header {
 	position: relative;
+	overflow-x: hidden;
 
 	&__title {
 		position: absolute;
@@ -247,12 +239,6 @@ body {
 		transition: box-shadow 0.2s ease-in-out;
 	}
 
-	&__social:hover {
-		box-shadow: 6px 6px 0px 0px var(--light-green);
-		// border: 1px solid var(--light-green);
-		cursor: pointer;
-	}
-
 	&__social-link {
 		font-size: 1.2rem;
 		text-decoration: none;
@@ -319,7 +305,7 @@ body {
 			img {
 				width: 100%;
 				height: auto;
-				transition: transform 0.3s ease;
+				transition: transform 0.2s ease;
 			}
 		}
 
@@ -366,7 +352,7 @@ body {
 		}
 	}
 
-	&__card:hover {
+	&__card:hover, .card__active {
 		border-color: var(--light-green);
 		cursor: pointer;
 
@@ -375,72 +361,10 @@ body {
 		}
 	}
 
-	.card__hover-effects {
+	.squares--color {
 		background-color: var(--light-green);
 		border-color: var(--light-green);
 	}
-
-	// .emtb:hover {
-	// 	.bikes__card-spec-square:nth-child(-n + 10) {
-	// 		background-color: var(--light-green);
-	// 		border-color: var(--light-green);
-	// 	}
-	// }
-
-	// .enduro-slash99:hover {
-	// 	.mountain-square:nth-child(-n + 9),
-	// 	.hill-square:nth-child(-n + 8),
-	// 	.forest-square:nth-child(-n + 7),
-	// 	.city-square:nth-child(-n + 3) {
-	// 		background-color: var(--light-green);
-	// 		border-color: var(--light-green);
-	// 	}
-	// }
-	// .enduro-slash97:hover {
-	// 	.mountain-square:nth-child(-n + 8),
-	// 	.hill-square:nth-child(-n + 8),
-	// 	.forest-square:nth-child(-n + 7),
-	// 	.city-square:nth-child(-n + 3) {
-	// 		background-color: var(--light-green);
-	// 		border-color: var(--light-green);
-	// 	}
-	// }
-	// .trail:hover {
-	// 	.mountain-square:nth-child(-n + 7),
-	// 	.hill-square:nth-child(-n + 8),
-	// 	.forest-square:nth-child(-n + 7),
-	// 	.city-square:nth-child(-n + 3) {
-	// 		background-color: var(--light-green);
-	// 		border-color: var(--light-green);
-	// 	}
-	// }
-	// .hardtail-roscoe7:hover {
-	// 	.mountain-square:nth-child(-n + 5),
-	// 	.hill-square:nth-child(-n + 5),
-	// 	.forest-square:nth-child(-n + 6),
-	// 	.city-square:nth-child(-n + 5) {
-	// 		background-color: var(--light-green);
-	// 		border-color: var(--light-green);
-	// 	}
-	// }
-	// .hardtail-procaliber97:hover {
-	// 	.mountain-square:nth-child(-n + 5),
-	// 	.hill-square:nth-child(-n + 6),
-	// 	.forest-square:nth-child(-n + 7),
-	// 	.city-square:nth-child(-n + 5) {
-	// 		background-color: var(--light-green);
-	// 		border-color: var(--light-green);
-	// 	}
-	// // }
-	// .xc:hover {
-	// 	.mountain-square:nth-child(-n + 4),
-	// 	.hill-square:nth-child(-n + 8),
-	// 	.forest-square:nth-child(-n + 7),
-	// 	.city-square:nth-child(-n + 4) {
-	// 		background-color: var(--light-green);
-	// 		border-color: var(--light-green);
-	// 	}
-	// }
 
 	.show-btn {
 		position: absolute;
@@ -487,9 +411,37 @@ body {
 	}
 }
 
-// .routes {
-// 	height: 100dvh;
-// }
+// media query on hover effects for mobile
+@media (hover: hover) {
+	// target devices that can only hover
+	.nav {
+		&__logo:hover {
+			color: var(--light-green);
+		}
+
+		&__item:hover::after {
+			transform: translateX(0%);
+			height: 50%;
+		}
+	}
+
+	.about-us {
+		&__social:hover {
+			box-shadow: 6px 6px 0px 0px var(--light-green);
+			// border: 1px solid var(--light-green);
+			cursor: pointer;
+		}
+	}
+}
+
+@media (hover: none) {
+	// target devices that can't hover
+	.about-us {
+		&__social {
+			box-shadow: 6px 6px 0px 0px var(--light-green);
+		}
+	}
+}
 
 // media queries
 @media (min-width: 576px) {
